Random number generator issues and other minor corrections
There were serveral corrections made in this commit:

 1. In MakeProfiles and MakeNoise that used the random number
    generator, everytime a random number was needed, a generator would
    be allocated and a number pulled out of it. Now I have put the
    main allocation of the random number generator inside ui.c and
    then the functions that need it either directly use it (MakeNoise)
    or get a clone of it for each thread and for each profile it is
    memcpy'd into the clone. This makes things much more cleaner for
    the human reader and the computer!

 2. In MakeNoise I also removed the backgroundinmean option. Since it
    just made things more complicated and I couldn't see how it would
    be useful. Adding noise without adding the background (the default
    behavior prior to this commit) was just useless.

 3. A bug in Convolve was fixed. The floating point error results
    after convolution were not correctly set to zero. Now it is fixed.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,28 @@
+2015-06-07  Mohammad Akhlaghi  <akhlaghi@gnu.org>
+
+	* src/mkprof/oneprofile.c (randompoints): The random number
+	generator is now allocated (cloned) with the build thread and for
+	every profile the seed is independently set once. Before each
+	pixel would allocate and seed the random number generator
+	individually!
+
+	* src/mkprof/astmkprof.conf: Changed default zeropoint magnitude
+	to 0.00.
+
+	* src/mknoise/mknoise.c (mknoise): moved the random number
+	generator to ui.c to make things faster and more easier to
+	understand.
+
+	* src/mknoise/args.h (argp_option): Removed the `backgroundinmean'
+	option, because I couldn't figure out what use it would have. If
+	it is needed we can add it again later!
+
+	* src/imgstat/args.h (argp_option): Changed `binonzero' option to
+	the more general `onebinvalue' option.
+
+	* src/convolve/convolve.c (removepaddingcorrectroundoff):
+	Corrected bug: would return *d in both cases! It is corrected now.
+
 2015-06-06  Mohammad Akhlaghi  <akhlaghi@gnu.org>
 
 	* lib/mesh.c (chbasedidfromgid): Chaged the old setmeshid to
